--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,17 +1,20 @@
 * {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
+    
 }
 
 body {
-    background-color: #f6f8fc;
+    background-image: url(/assets/images/nacho-cordova-pokemon-forest-friends.jpg );
+    background-size:100%;   
+    
 }
 
 .content {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: #f8f8f8;
 }
 
 @media screen and (min-width: 992px) {
