--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,3 +1,10 @@
+h1{
+    color: #564ea7;
+    text-align: center;
+    
+    
+}    
+
 .pokemons {
     display: grid;
     grid-template-columns: 1fr;
@@ -146,6 +153,15 @@
     border-radius: 1rem;
 }
 
+.details button {
+    padding: .25rem .5rem;
+    margin: .25rem .5rem;
+    font-size: .625rem;
+    color: #fff;
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
+}
 @media screen and (min-width: 380px) {
     .pokemons {
         grid-template-columns: 1fr 1fr;
